kubernetes/meale/deploy_test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mealie
  name: mealie
  namespace: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      containers:
      - image: ghcr.io/mealie-recipes/mealie:v3.3.2
        name: mealie
        ports: 
          - containerPort: 9000
        volumeMounts:
          - mountPath: "/app/data"
            name: data
      volumes:
        - name: data
          emptyDir:
            sizeLimit: 500Mi
