kubernetes/meale/service.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: mealie
    name: mealie
    namespace: mealie
  spec:
    ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
    selector:
      app: mealie
    type: LoadBalancer
kind: List
